# autosar-data-abstraction

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: arpackage.rs  ecuinstance.rs  lib.rs
src/communication/: data_transformation.rs  datatransformation.rs  mod.rs
src/communication/cluster/: can.rs  ethernet.rs  flexray.rs  lin.rs  mod.rs
src/communication/controller/: can.rs  ethernet.rs  flexray.rs  lin.rs  mod.rs
src/communication/frame/: can.rs  flexray.rs  lin.rs  mod.rs
src/communication/network_management/: can_nm.rs  flexray_nm.rs  mod.rs  udp_nm.rs
src/communication/pdu/: container_ipdu.rs  isignal_idpu.rs  isignal_ipdu.rs  mod.rs  secured_ipdu.rs
src/communication/physical_channel/: can.rs  flexray.rs  lin.rs  mod.rs
src/communication/signal/: mod.rs
src/communication/transport_layer/: can_tp.rs  doip_tp.rs  flexray_ar_tp.rs  flexray_tp.rs  mod.rs
src/datatype/: applicationtype.rs  basetype.rs  compu_method.rs  implementationtype.rs  mapping.rs  mod.rs  values.rs
src/ecu_configuration/: mod.rs
src/ecu_configuration/definition/: container.rs  mod.rs  parameter.rs  reference.rs
src/ecu_configuration/values/: mod.rs  parameter.rs  reference.rs
src/software_component/: connector.rs  internal_behavior.rs  mod.rs  mode.rs  port.rs
src/software_component/interface/: clientserver.rs  mod.rs  senderreceiver.rs
src/software_component/internal_behavior/: mod.rs  rte_event.rs
src/system/: mapping.rs  mod.rs
tests/: test_can.rs  test_ethernet_v1.rs  test_ethernet_v2.rs  test_flexray.rs
(+6 files in other folders)
